--- a/assignments/week2/style.css
+++ b/assignments/week2/style.css
@@ -14,12 +14,16 @@ h1 span {
 background-color:pink
 }
 div.Chicken,div.Mutton,div.Fish {
-width:30%
+width:30%;
 float:left;
 border: 5px solid black;
 background-color:grey;
 }
-
+/*@media (min-width) {
+div.Chicken,div.Mutton,div.Fish {
+width:33%;
+float:left;
+}*/
 @media (min-width:768px) and (max-width:991px) {
 div.Fish{
 
